--- a/src/app/newsmodule/newsmodule.component.html
+++ b/src/app/newsmodule/newsmodule.component.html
@@ -5,22 +5,25 @@
 <div class="w3l-homeblock2 py-5">
     <div class="container py-lg-5 py-md-4">
         <!-- block -->
+        <section style="background-color: white; width: 100%;">
+          <recommendations></recommendations>
+        </section> 
 <section class="bg-gray">
     <about-us></about-us>
 </section>
 <!-- footer-28 block -->
-<section class="app-footer">
-  <footer class="footer-28 py-5">
-    <div class="footer-bg-layer">
-      <div class="container py-lg-3">
-        <div class="row footer-top-28">
+<section class="app-footer ">
+  <footer class="footer-28 py-5 ">
+    <div class="footer-bg-layer ">
+      <div class="container py-lg-3 ">
+        <div class="row footer-top-28 " >
           <div class="col-lg-4 footer-list-28 copy-right mb-lg-0 mb-sm-5 mt-sm-0 mt-4">
-            <a class="navbar-brand mb-3" href="index.html">
+            <a class="navbar-brand mb-3 mt-sm-5" href="index.html">
               <span class="fa fa-newspaper-o"></span> NewsBlog</a>
             <p class="copy-footer-28"> © 2020. All Rights Reserved. </p>
             <!-- <h5 class="mt-2">CEOs: Ali Mrad , Amena Khalife, Mohammad Zeineddine </h5> -->
           </div>
-          <div class="col-lg-8 row">
+          <!-- <div class="col-lg-8 row">
             <div class="col-sm-4 col-6 footer-list-28">
               <h6 class="footer-title-28">Useful links</h6>
               <ul>
@@ -29,8 +32,8 @@
                 <li><a href="#authors">Our Authors</a></li>
                 <li><a href="contact.html">Get in touch</a></li>
               </ul>
-            </div>
-            <div class="col-sm-4 col-6 footer-list-28">
+            </div> -->
+            <div class="col-sm-4 col-6 footer-list-28 mt-sm-5">
               <h6 class="footer-title-28">Categories</h6>
               <ul>
                 <li><a href="beauty.html">Beauty</a></li>
@@ -39,7 +42,7 @@
                 <li><a href="#lifestyle">Lifestyle</a></li>
               </ul>
             </div>
-            <div class="col-sm-4 col-6 footer-list-28 mt-sm-0 mt-4">
+            <div class="col-sm-4 col-6 footer-list-28 mt-sm-5 mt-4">
               <h6 class="footer-title-28">Social Media</h6>
               <ul class="social-icons">
                 <li class="facebook">
@@ -53,7 +56,6 @@
           </div>
         </div>
       </div>
-    </div>
   </footer>
 
   <!-- move top -->
