--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,13 +6,21 @@
 <body>
 <div class="container">
   <section id="content">
-    <form action="">
+  
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+
       <h1>Login</h1>
       <div>
-        <input type="text" placeholder="Email Adress" required="" id="Email" />
+        <input type="text" placeholder="Email Adress"  formControlName="email" required="" id="Email" />
+        <div class="m-2 text-danger fw-bold" *ngIf="loginForm.get('email')?.hasError('error_email')">
+          {{ loginForm.get('email')?.getError('error_email') }}
+        </div>
       </div>
       <div>
-        <input type="password" placeholder="Password" required="" id="password" />
+        <input  type="password" placeholder="Password" formControlName="password" required="" id="password" />
+        <div class="m-2 text-danger fw-bold" *ngIf="loginForm.get('password')?.hasError('error_pass')">
+          {{ loginForm.get('password')?.getError('error_pass') }}
+        </div>
       </div>
       <div>
         <input type="submit" value="Log in" />
@@ -20,8 +28,23 @@
         <a class="nav-link" routerLink="/signUp">Sign up</a>
       </div>
     </form><!-- form -->
-    
+
+  
   </section><!-- content -->
+
+  <div>
+    <div class=" text-center">
+  
+      <div *ngIf="loading" class="spinner-border" role="status">
+        <h6>......</h6>
+      </div>
+  
+      <div *ngIf="loading">
+          <h4 class="mt-3 text-success">{{ response_msg }}</h4>
+        </div>    
+  
+    </div>
+  </div>
 </div><!-- container -->
 </body>
 </html>
