--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,12 +6,12 @@
 	<nav class="navbar navbar-expand-lg navbar-light fill px-lg-0 py-0 px-sm-3 px-0" >
 			<a class="navbar-brand" href="index.html">
 				<span class="fa fa-newspaper-o"></span> NewsBlog</a>
-			<!-- if logo is image enable this   
+			<!-- if logo is image enable this
 						<a class="navbar-brand" href="#index.html">
 							<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 						</a> -->
 
-			
+
 			<button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
 				data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -35,21 +35,19 @@
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" routerLink="/login">Login</a>
+						<a (click)="check()" class="nav-link" routerLink="/login">{{ state }}</a>
 					</li>
-					
-					
 
-					<li class="nav-item">
+					<li *ngIf="isLoggedIn" class="nav-item">
 						<a class="nav-link" routerLink="news/new">Add News</a>
 					</li>
 
 					<li class="nav-item @@contact__active">
-						<a class="nav-link" routerLink="/about-us">About Us</a>
+						<a  class="nav-link" routerLink="/about-us">About Us</a>
 					</li>
 				</ul>
 			</div>
-			
+
 </nav>
 </div>
 </header>
