--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -45,8 +45,12 @@
 					<li class="nav-item @@contact__active">
 						<a  class="nav-link" routerLink="/about-us">About Us</a>
 					</li>
+					<li class="nav-item @@contact__active">
+						<a  class="nav-link" routerLink="/profile">Profile</a>
+					</li>
 				</ul>
 			</div>
+
 
 </nav>
 </div>
